updated placeholder name

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
         <div>
             <label for="name">Name: </label>
-            <input type="text" id="name1" spellcheck="false" placeholder=" Nimash Eshan" />
+            <input type="text" id="name1" spellcheck="false" placeholder=" Nimash" />
             <p id="ename" style="display: none;"></p>
         </div>
 
