--- a/index.html
+++ b/index.html
@@ -114,6 +114,21 @@
         p.ry{
             transform: translate3d(274px,-53px,0);
         }
+        a{
+            display: flex;
+            padding: 6px;
+            margin-right: 438px;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            background: #0294a1;
+            transform: translate3d(33px,38px,0);
+            bottom: 20px;
+            margin-bottom: 40px;
+        }
+        a:hover{
+            background: #036d77;
+        }
 
     </style>
 </head>
@@ -136,7 +151,7 @@
 
         <div>
             <label for="name">Name: </label>
-            <input type="text" id="name1" spellcheck="false" placeholder=" Nimash" />
+            <input type="text" id="name1" spellcheck="false" placeholder=" Nimash Eshan" />
             <p id="ename" style="display: none;"></p>
         </div>
 
@@ -465,6 +480,7 @@
         </div>
         <p class="ry" id="ebtn" style="display: none;">please fill required fields</p>
     </form>
+    <a href="./question3.html" target="_blank" rel="noopener noreferrer">Take me to the Question 03</a>
     </div>          
 </body>
 </html>
